# orbital-engagement-lab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  RELEASE_CHECKLIST.md  SECURITY.md  product_maturity_roadmap.md  product_maturity_roadmap.txt  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements-game.txt  requirements-gui.txt  requirements-ml.txt  requirements.txt  run_game.py  run_gui.py  run_simulation.py  simulation_framework_roadmap.txt
configs/: automation_smoke.yaml  config_instructions.txt  game_mode_basic.yaml  game_training_rpo_01_coast_relative_motion.yaml  hcw_lqr_two_body_ic_closing_velocity.yaml  hcw_lqr_two_body_ic_coupled.yaml  hcw_lqr_two_body_ic_cross_track.yaml  hcw_lqr_two_body_ic_far_along_track.yaml  hcw_lqr_two_body_ic_radial_offset.yaml  hcw_lqr_two_body_perfect.yaml  plotting_rendezvous_demo.yaml  quickstart_5min.yaml  simulation_template.yaml  validation_harness_default.yaml  validation_harness_matlab_hpop.yaml  validation_harness_smoke.yaml  validation_integrated_lqr_single.yaml
docs/: custom-analysis.md  first-five-minutes.md  game-mode-roadmap.md  plot-gallery.md  plotting.md  public-vs-pro.md  quickstart.md  scenario-yaml.md
examples/: ASAT_Phased_Engagement_Demo.py  Attitude_LQR_RICFrame_Hold_Disturbances.py  Attitude_LQR_RIC_Hold_Disturbances.py  Attitude_PD_ECI_Detumble_ReactionWheel_Demo.py  Attitude_PD_RIC_Detumble_ReactionWheel_Demo.py  Attitude_PD_RIC_ReactionWheel_Demo.py  Attitude_PD_ReactionWheel_Demo.py  Attitude_PID_RIC_ReactionWheel_Demo.py  Full_Framework_Demo.py  (+41 more)
(+279 files in other folders)
