[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-engagement-lab"
version = "0.1.0"
description = "Integrated spacecraft simulation and analysis platform for rendezvous, control, validation, and mission prototyping."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Orbital Engagement Lab Contributors" },
]
dependencies = [
  "numpy<2.0",
  "matplotlib>=3.7",
  "tqdm>=4.65",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
gui = [
  "PySide6>=6.7",
]
game = [
  "pygame>=2.5",
]
ml = [
  "gymnasium>=0.29",
  "torch>=2.1",
  "lightning>=2.2",
]
full = [
  "pytest>=8.0",
  "PySide6>=6.7",
  "pygame>=2.5",
  "gymnasium>=0.29",
  "torch>=2.1",
  "lightning>=2.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sim = ["presets/objects/*.yaml"]

[tool.setuptools.packages.find]
include = ["sim*", "machine_learning*"]
exclude = ["sim.tests", "sim.tests.*"]
